--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "framer-motion": "^7.10.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
